Implement customer management features with command handlers and exception handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-#General database config
-quarkus.application.name=${APP_NAME}
-quarkus.datasource.db-kind=${DB_KIND}
-quarkus.datasource..jdbc.driver=${DB_DRIVER}
-quarkus.datasource.jdbc.url=${DB_URL}
-quarkus.datasource.username=${DB_USER}
-quarkus.datasource.password=${DB_PASSWORD}
+#General Database Configuration
+quarkus.datasource.jdbc.driver=org.postgresql.Driver
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/customer-management
+quarkus.datasource.username=postgres
+quarkus.datasource.password=postgres
+
+# Database before running the application
+#quarkus.hibernate-orm.database.generation=drop-and-create
+
+
+#External API Service Configuration
+quarkus.rest-client.country-api.url=https://restcountries.com/v3.1
