Add deployment scripts and update database configuration for customer management

--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,12 @@
-QUARKUS_DATASOURCE_DB_KIND=example
-QUARKUS_DATASOURCE_USERNAME=myuser
-QUARKUS_DATASOURCE_PASSWORD=mypassword
-QUARKUS_DATASOURCE_URL=jdbc:kind://localhost:5432/mydb
+# Quarkus configuration
+QUARKUS_DATASOURCE_JDBC_URL=jdbc:postgresql://db:5432/customer-management
+QUARKUS_DATASOURCE_USERNAME=api
+QUARKUS_DATASOURCE_PASSWORD=customer
+
+# External API configuration
+REST_COUNTRIES_API_URL=https://restcountries.com/v3.1
+
+# Datasource configuration
+POSTGRES_DB=customer-management
+POSTGRES_USER=api
+POSTGRES_PASSWORD=customer
