--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,22 @@
 #General Database Configuration
 quarkus.datasource.jdbc.driver=org.postgresql.Driver
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/customer-management
-quarkus.datasource.username=postgres
-quarkus.datasource.password=postgres
+quarkus.datasource.jdbc.url=${DATASOURCE_JDBC_URL}
+quarkus.datasource.username=${DATASOURCE_USERNAME}
+quarkus.datasource.password=${DATASOURCE_PASSWORD}
 
 # Database before running the application
 #quarkus.hibernate-orm.database.generation=drop-and-create
 
-
 #External API Service Configuration
-quarkus.rest-client.country-api.url=https://restcountries.com/v3.1
+quarkus.rest-client.country-api.url=${REST_COUNTRIES_API_URL}
+
+## Flyway Configuration
+quarkus.flyway.migrate-at-start=true
+quarkus.flyway..schemas=public
+
+## OpenAPI Configuration
+quarkus.smallrye-openapi.enable=true
 
 
+## Application Configuration
+quarkus.application.name=Customer Management
