--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,9 @@ quarkus.flyway.migrate-at-start=true
 
 ## OpenAPI Configuration
 quarkus.smallrye-openapi.enable=true
-
+quarkus.swagger-ui.enable=true
+quarkus.swagger-ui.path=/q/swagger-ui
+quarkus.swagger-ui.always-include=true
 
 ## Application Configuration
 quarkus.application.name=Customer Management
